2006-06-10  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:

	2006-05-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	            Bruno Haible  <bruno@clisp.org>

	* strndup.c (strndup) [!_LIBC]: Don't undefine macro definition.

2006-06-04  Paul Eggert  <eggert@cs.ucla.edu>

	* regexec.c (group_nodes_into_DFAstates): Fix a buffer overrun
	reported by Andreas Schwab.

2006-05-25  Paul Eggert  <eggert@cs.ucla.edu>

	* tempname.c (small_open, large_open): New macros.
	(__open, __open64) [!_LIBC]: Remove.
	(__gen_tempname): Use small_open and large_open instead of __open
	and __open64.  This fixes a portability bug on HP-UX 11.11i
	reported by Simon Wing-Tang in
	<http://lists.gnu.org/archive/html/bug-coreutils/2006-05/msg00114.html>.

2006-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c: Don't include <string.h>; this include was
	inadvertently put into the previous patch.  Problem noted
	by Jim Meyering.

2006-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c (setst): Remove.
	(strmode): Rewrite to avoid setst.  This makes the code shorter,
	(arguably) clearer, and the generated code is a bit smaller on my
	Debian GNU/Linux stable x86 host.

	Import from gnulib.
	* verify.h: Document the internals better.  Most of this change
	was written by Bruno Haible.

2006-05-21  Jim Meyering  <jim@meyering.net>

	* fts.c (fts_open): Fail with EINVAL if a caller violates this rule:
	Either FTS_LOGICAL or FTS_PHYSICAL must be provided to the
	fts_open() function.

2006-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	* nanosleep.c [HAVE_SYS_SELECT_H]: Include <sys/select.h>.
	Use the usual Autoconf way to include <time.h> and/or sys/time.h.
	(my_usleep): Don't mishandle maximum value.

2006-05-15  Jim Meyering  <jim@meyering.net>

	Avoid the expense of an fstat, when possible.
	* fts.c (O_NOFOLLOW, STREQ): Define.
	(diropen_fd): Remove function.  Merge it into sole caller...
	(diropen): ...here.  Use O_NOFOLLOW when appropriate.