@@ -1,3 +1,9 @@
+2006-06-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* getdate.y (__attribute__): Don't define if already defined.
+	Problem reported by Larry Jones.
+	* utimens.c (__attribute__): Likewise.
+
 2006-06-10  Jim Meyering  <jim@meyering.net>
 
 	Apply this change from gnulib:
